--- a/GestionDechets/pom.xml
+++ b/GestionDechets/pom.xml
@@ -14,6 +14,21 @@
 <junit.version>5.10.2</junit.version>  </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>com.itextpdf</groupId>
+          <artifactId>kernel</artifactId>
+          <version>7.2.3</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.pdfbox</groupId>
+          <artifactId>pdfbox</artifactId>
+          <version>2.0.30</version>
+      </dependency>
+      <dependency>
+          <groupId>com.itextpdf</groupId>
+          <artifactId>layout</artifactId>
+          <version>7.2.3</version>
+      </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
